brat/test/golden/error/bad_underscore2.brat.golden
Error in test/golden/error/bad_underscore2.brat@2:13-14
uscore(i) = _
            ^

  Parse error unexpected _

